--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ zab-ordnung
     width: 100%;
     padding: 10%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
     gap: 1rem;
 }
 
